syntax = "proto3";

package user;

service UserService {
  rpc Create (CreateUserDto) returns (User) {}
  rpc Update (User) returns (User) {}
  rpc Remove (FindUserDto) returns (User) {}
  rpc FindOne (FindUserDto) returns (User) {}
  rpc FindAll (Empty) returns (Users) {}
}

message Empty {}

message CreateUserDto {
  string username = 1;
  string password = 2;
}

message User {
  string id = 1;
  string username = 2;
  string password = 3;
  bool isActive = 4;
}

message FindUserDto {
  optional string id = 1;
  optional string username = 2;
}

message Users {
  repeated User users = 1;
}
